# sst_model

./: README.md  pyproject.toml
src/stt_agent/: __init__.py  agent.py  api.py  cli.py  config.py  ollama_client.py  prompts.py
tests/: test_agent.py
